<resources>
    <string name="locale" />
    <string name="app_name">English Bigger</string>
    <string name="facebook_app_id">109163919789581</string>
    <string name="fb_login_protocol_scheme">fb109163919789581</string>
    <string name="firebase_app_id">1:104685642939:android:870eeda71bc124fa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="ad_mob_app_id2">ca-app-pub-7825788831137519~4959694201</string>
    <string name="ad_id_small">ca-app-pub-7825788831137519/1184100721</string>
    <string name="ad_id_full">ca-app-pub-7825788831137519/9040154412</string>

    <string name="ad_mob_app_id">ca-app-pub-7825788831137519~8179742154</string>
    <string name="ad_id_small_1">ca-app-pub-7825788831137519/6455596947</string>
    <string name="ad_id_small_2">ca-app-pub-7825788831137519/6353323461</string>
    <string name="ad_id_small_3">ca-app-pub-7825788831137519/8838395317</string>
    <string name="ad_id_small_4">ca-app-pub-7825788831137519/3801691051</string>
    <string name="ad_id_full_1">ca-app-pub-7825788831137519/8326425270</string>
    <string name="ad_id_full_2">ca-app-pub-7825788831137519/3162562659</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inforLocale"></string>
    <string name="saveInforLoginFB"></string>
    <string name="saveInforUser"></string>
    <string name="saveInfoApp"></string>

    <string name="allFriends">All friends:</string>
    <string name="allFriendsHaveUsedTheApp">All friends have used the app:</string>
    <string name="share">Share</string>
    <string name="inviteFriends">Invite friends</string>
    <string name="youHaveNoTopic">You have no topic!</string>
    <string name="chooseATopicToLearn">Choose a topic to learn!</string>
    <string name="empty">Empty</string>
    <string name="doYouWantToDeleteIt">Do you want to delete it?</string>
    <string name="thisDeviceHasNoCamera">This device has no camera!</string>
    <string name="addingTopic">Adding Topic</string>
    <string name="updatingTopic">Updating Topic</string>
    <string name="fileUpload">File Upload</string>
    <string name="uploadInProgress">Upload in progress!</string>
    <string name="camera">Camera</string>
    <string name="choosePhoto">Choose photo</string>
    <string name="addNewWords">Add new words</string>
    <string name="vocabularyWords">vocabulary words</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="noFriendsUseThisApp">No friends use this app!</string>
    <string name="errorInternetConnectionProblems">Error due to internet connection problem!</string>
    <string name="errorInputParameters">Error input parameters</string>
    <string name="pleaseWait">Please wait...</string>
    <string name="loading">Loading...</string>
    <string name="msgYouAreNotLoggedIn">You are not logged in!</string>
    <string name="msgPleaseLoginToUseThisFeature">Please log in to use this feature!</string>
    <string name="name">Name: </string>
    <string name="email">Email: </string>
    <string name="gender">Gender: </string>
    <string name="birthday">Birthday: </string>
    <string name="liveAt">Live at: </string>
    <string name="myInfor">My information</string>
    <string name="friend">Friends</string>
    <string name="settings">Settings</string>
    <string name="policy">Policy</string>
    <string name="support">Support</string>
    <string name="feedback">Feedback</string>
    <string name="accountSuccessfullyLoggedOut">Account successfully logged out!</string>
    <string name="logout">Logout</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="repeat">Repeat</string>
    <string name="otherTopic">Other Topic</string>
    <string name="youAreAlreadyLoggedOnByTheAccount">You are already logged on by the account: </string>
    <string name="loginWithFacebook">Login with facebook</string>
    <string name="hi">Hi, </string>
    <string name="connectFacebook">Connect facebook</string>
    <string name="selectLangguage">Please select a language!</string>
    <string name="deviceLanguage">Device language</string>
    <string name="learn">Learn</string>
    <string name="learnNow">Learn now</string>
    <string name="learnByTopic">Learn by topic</string>
    <string name="manageTopics">Manage topics</string>
    <string name="whatDoPeopleLearn">What do people learn</string>
    <string name="whatDoPeopleLearn2">What do people learn ?</string>
    <string name="other">Other</string>
    <string name="addAndTranslate">Add &amp; Translate</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="Translate">Translate</string>
    <string name="msgYouHaveNotEnteredAnythingYet">You have not entered anything yet!</string>
    <string name="msgVocabularyAlreadyExists">Vocabulary already exists!</string>
    <string name="topicAlreadyExists">Topic already exists!</string>
    <string name="msgItsVocabularyAndMeaningAreTheSameDoYouReallyWantToAdd">Its vocabulary and meaning are the same. Do you really want to add?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="failure">Failure!</string>
    <string name="successfullyAdded">Successfully added!</string>
    <string name="nothingToAdd">Nothing to add!</string>
    <string name="success">Success!</string>
    <string name="changedSuccessfully">Changed successfully!</string>
    <string name="deletedSuccessfully">Deleted successfully!</string>
    <string name="ok_">OK</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="functionIsBeingUpdated">Function is being updated!</string>
    <string name="finish">Finish!</string>
    <string name="oopsYouJustDeniedThePermission">Oops you just denied the permission!</string>
    <string name="permissionGrantedNowYouCanReadTheStorage">Permission granted now you can read the storage!</string>
    <string name="permissionGrantedNowYouCanOpenTheCamera">Permission granted now you can open the camera!</string>
    <string name="youHaveNotEnteredTheTopicNameYet">You have not entered the topic name yet!</string>
    <string name="itLooksLikeYouHaveNotSelectedAPhotoYet">It looks like you have not selected a photo yet!</string>
    <string name="defaultPhoto">Default photo</string>
    <string name="selectTopic">Select Topic:</string>
    <string name="youHaveNotEnteredTheMeaningOfIt">You have not entered the meaning of it!</string>
    <string name="automaticallyTranslatesItsMeaning">Automatically translates its meaning (Add)</string>
    <string name="enterItsMeaning">Enter its meaning (Add)</string>
    <string name="exactly">Exactly !</string>
    <string name="wrong">Wrong !</string>
    <string name="newTopic">New Topic</string>
    <string name="addToTopicAvailable">Add to Topic available</string>
    <string name="select_">---Select---</string>
    <string name="select">Select</string>
    <string name="msgPleaseSelectAValidTopicName">Please select a valid topic name!</string>
    <string name="content">Content</string>
    <string name="commentedSuccessfully">Commented successfully!</string>
    <string name="commentedFailed">Commented failed!</string>

    <string name="detectNewVersion">Detect new version!</string>
    <string name="currentVersion">Current version</string>
    <string name="newVersion">New version</string>
    <string name="update">Update</string>

</resources>
