<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bgr_list_ac"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnLearnNow"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginLeft="64dp"
                android:layout_marginRight="64dp"
                android:background="@drawable/bgr_btn"
                android:text="@string/learnNow"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="#3600ff"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:layout_marginTop="128dp"
                app:layout_constraintTop_toTopOf="parent"/>

            <Button
                android:id="@+id/btnLearnByTopic"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:background="@drawable/bgr_btn"
                android:text="@string/learnByTopic"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="#3600ff"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/btnLearnNow"
                android:layout_marginLeft="64dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="64dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp" />

            <Button
                android:id="@+id/btnWhatDoPeopleLearn"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:background="@drawable/bgr_btn"
                android:text="@string/whatDoPeopleLearn"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="#3600ff"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/btnLearnByTopic"
                android:layout_marginLeft="64dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="64dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginLeft="64dp"
                android:layout_marginRight="64dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bgr_btn"
                android:text="@string/addAndTranslate"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="#3600ff"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnWhatDoPeopleLearn"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp" />

            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                ads:layout_constraintVertical_bias="1"
                ads:adSize="BANNER"
                ads:adUnitId="@string/ad_id_small_1"
                ads:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAdd">
            </com.google.android.gms.ads.AdView>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</LinearLayout>
