<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="2dp"
        android:layout_height="wrap_content">
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/layoutMore"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutMainItem"
        android:layout_width="match_parent"
        android:layout_height="72px"
        android:layout_marginTop="3px"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgMainItem"
            android:layout_width="49px"
            android:layout_height="94px"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="24px"
            android:src="@drawable/ic_info"
            tools:ignore="ContentDescription,RtlHardcoded" />

        <TextView
            android:id="@+id/txtNameMainItem"
            android:layout_width="wrap_content"
            android:layout_height="72px"
            android:gravity="center_vertical"
            android:paddingLeft="32px"
            android:text="@string/myInfor"
            android:textColor="#3b3b3b"
            android:textSize="28px"
            tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imgShow"
                android:layout_width="7dp"
                android:layout_height="11dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_show_all"
                android:layout_marginRight="24dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                tools:ignore="ContentDescription,RtlHardcoded"
                android:layout_marginEnd="24dp" />
            <ImageView
                android:visibility="gone"
                android:id="@+id/imgShowed"
                android:layout_width="11dp"
                android:layout_height="7dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_showed"
                android:layout_marginRight="24dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                tools:ignore="ContentDescription,RtlHardcoded"
                android:layout_marginEnd="24dp" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_marginTop="5dp"
        android:id="@+id/layoutLanguageChild"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtAllFriends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="3dp"
            android:layout_marginLeft="24px"
            android:textColor="#4b4f56"
            android:text="@string/allFriends"/>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layoutDevice"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@color/colorWhite"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:gravity="center"
                android:text="@string/deviceLanguage"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.46"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:visibility="gone"
                android:id="@+id/imgSelected"
                android:layout_width="wrap_content"
                android:src="@drawable/ic_true"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintHorizontal_bias="1.0" />
        </android.support.constraint.ConstraintLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_marginTop="10px"
            android:id="@+id/rvItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:nestedScrollingEnabled="true"
            android:background="@color/colorWhite"/>

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/layoutChildItem"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:text="@string/name"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp" />
            <TextView
                android:id="@+id/txtNameChildItem"
                android:layout_width="wrap_content"
                android:text="@string/name"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toRightOf="@+id/text1"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:text="@string/birthday"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text1"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/txtBirthdayChildItem"
                android:layout_width="wrap_content"
                android:text="@string/birthday"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                app:layout_constraintTop_toBottomOf="@+id/text1"
                app:layout_constraintLeft_toRightOf="@+id/text2"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:text="@string/gender"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text2"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/txtGenderChildItem"
                android:layout_width="wrap_content"
                android:text="@string/gender"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                app:layout_constraintTop_toBottomOf="@+id/text2"
                app:layout_constraintLeft_toRightOf="@+id/text3"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:text="@string/liveAt"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text3"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/txtLocationChildItem"
                android:layout_width="wrap_content"
                android:text="@string/liveAt"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                app:layout_constraintTop_toBottomOf="@+id/text3"
                app:layout_constraintLeft_toRightOf="@+id/text4"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:text="@string/email"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text4"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/txtEmailChildItem"
                android:layout_width="wrap_content"
                android:text="@string/email"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                app:layout_constraintTop_toBottomOf="@+id/text4"
                app:layout_constraintLeft_toRightOf="@+id/text5"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>


</LinearLayout>