<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorApp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgCloseDialog"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/back"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp" />

    <LinearLayout
        android:id="@+id/layoutTr"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="#f9f9f9"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/text"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textSize="@dimen/text_actionbar"
        android:textColor="@color/colorTextName"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/layoutTr"
        android:id="@+id/constraintLayout3"
        app:layout_constraintHorizontal_bias="0.0">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="PxUsage"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <LinearLayout
                android:id="@+id/layoutNewName"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@drawable/layout_border_txt_gray"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_name_big"
                    tools:ignore="ContentDescription,PxUsage" />

                <EditText
                    android:id="@+id/txtNewNameTopicDialog"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:background="#00ffffff"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/text_content"
                    android:inputType="textImeMultiLine"
                    android:paddingLeft="10dp"
                    android:textColor="@color/colorTextName"
                    tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutGetNameTopic"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@drawable/layout_border_txt_gray"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_name_big"
                    tools:ignore="ContentDescription,PxUsage" />

                <Spinner
                    android:id="@+id/spNameTopicDialog"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:background="@drawable/spinner"
                    android:gravity="center_vertical"
                    android:inputType="textImeMultiLine"
                    android:textSize="@dimen/text_content"
                    android:textColor="@color/colorTextName"
                    tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />
            </LinearLayout>

        </LinearLayout>

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16px"
            android:layout_marginRight="16px"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radShowTXTNewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:textSize="@dimen/text_content"
                android:text="@string/newTopic"
                android:textColor="@color/colorTextName"
                app:buttonTint="#6cc29e"
                tools:ignore="HardcodedText" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radShowSPNewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/text_content"
                android:text="@string/addToTopicAvailable"
                android:textColor="@color/colorTextName"
                app:buttonTint="#6cc29e"
                tools:ignore="HardcodedText" />
        </RadioGroup>

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/btnBackupDialog"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:background="@drawable/layout_border_full_green"
        android:text="@string/ok_"
        android:textSize="@dimen/text_buttom"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="64dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="16dp" />

</android.support.constraint.ConstraintLayout>
